// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <PaymentSummary /> should match PaymentSummary snapshot test 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-12 makeStyles-root-1 false"
  >
    <div
      class="MuiBox-root MuiBox-root-13 makeStyles-roots-3"
    >
      <p
        class="MuiTypography-root makeStyles-heading-6 MuiTypography-body1"
      >
        Terminal:
      </p>
      <p
        class="MuiTypography-root makeStyles-subheading-7 MuiTypography-body1"
      >
         S/N 
      </p>
      <div
        class="MuiPaper-root MuiBox-root MuiBox-root-14 makeStyles-paper-8 MuiPaper-elevation1 MuiPaper-rounded"
      >
        $0.00
      </div>
      <p
        class="MuiTypography-root makeStyles-orderSummery-9 MuiTypography-body1"
      >
        Order Summary
      </p>
      <hr
        class="MuiDivider-root MuiDivider-middle"
      />
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-subTotal-15 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Subtotal
          </span>
        </div>
        <p
          class="MuiTypography-root makeStyles-price-16 MuiTypography-body1"
        >
          $0.00
        </p>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-additionalChargesDisable-18 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Surcharge
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          $0.00
        </p>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-additionalChargesDisable-18 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Cashout
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          $0.00
        </p>
      </li>
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary makeStyles-additionalChargesDisable-18 MuiTypography-body1 MuiTypography-displayBlock"
          >
            Tip
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          $0.00
        </p>
      </li>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root makeStyles-actionBtn-11 MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-test-id="newOrderBtn"
            href="/"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiButton-label"
            >
              New Order
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test <PaymentSummary /> should match snapshot for Purchase failure 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-136 makeStyles-root-115 makeStyles-alignTop-116"
  >
    <div
      class="MuiBox-root MuiBox-root-137 makeStyles-roots-117"
    >
      <svg
        class="makeStyles-failedIcon-119"
      >
        FailedIcon.svg
      </svg>
      <h1
        class="MuiTypography-root MuiTypography-h5"
      >
        Refund
         Declined
      </h1>
      <p
        class="MuiTypography-root makeStyles-heading-120 MuiTypography-body1"
      >
        Terminal:
        123
      </p>
      <p
        class="MuiTypography-root makeStyles-subheading-121 MuiTypography-body1"
      >
        192.168.1.10
         S/N 
        123-123-123
      </p>
      <div
        class="MuiPaper-root MuiBox-root MuiBox-root-138 makeStyles-paper-122 MuiPaper-elevation1 MuiPaper-rounded"
      >
        $5.50
      </div>
      <br />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root makeStyles-actionBtn-125 MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            href="/refund"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiButton-label"
            >
              Refund
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root makeStyles-actionBtn-125 MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-test-id="newOrderBtn"
            href="/"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiButton-label"
            >
              New Order
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test <PaymentSummary /> should match snapshot for Purchase success 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-112 makeStyles-root-91 makeStyles-alignTop-92"
  >
    <div
      class="MuiBox-root MuiBox-root-113 makeStyles-roots-93"
    >
      <svg
        class="makeStyles-successIcon-94"
      >
        SuccessIcon.svg
      </svg>
      <h1
        class="MuiTypography-root MuiTypography-h5"
      >
        Refund
         Approved
      </h1>
      <p
        class="MuiTypography-root makeStyles-heading-96 MuiTypography-body1"
      >
        Terminal:
        123
      </p>
      <p
        class="MuiTypography-root makeStyles-subheading-97 MuiTypography-body1"
      >
        192.168.1.10
         S/N 
        123-123-123
      </p>
      <div
        class="MuiPaper-root MuiBox-root MuiBox-root-114 makeStyles-paper-98 MuiPaper-elevation1 MuiPaper-rounded"
      >
        $5.50
      </div>
      <br />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root makeStyles-actionBtn-101 MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            href="/refund"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiButton-label"
            >
              Refund
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root makeStyles-actionBtn-101 MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
            data-test-id="newOrderBtn"
            href="/"
            role="button"
            tabindex="0"
          >
            <span
              class="MuiButton-label"
            >
              New Order
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
